fix z-index on popout

--- a/styles.sass
+++ b/styles.sass
@@ -79,6 +79,7 @@ $font-header: 'Playfair Display'
   width: 0
   height: 0
   opacity: 0
+  z-index: -1
 
   #exit
     position: absolute
